# move-runner

./: Cargo.toml  README.md
.github/workflows/: release.yaml
docs/: 01_quick_start.md  02_integrate_with_ide.md  03_building_project.md  04_custom_your_project.md  05_initial_states_from_genesis.md
sample/: Move.toml  genesis.blob
sample/src/modules/: hello_world.mvir
sample/src/scripts/: test_hello_argument.mvir  test_hello_world.mvir
sample/test/: test_hello_world.mvir
src/: config.rs  main.rs  runner.rs
src/commands/: build.rs  compile.rs  mod.rs  new.rs  run.rs  test.rs  type_parser.rs
