[package]
name = "move-runner"
version = "0.0.1"
authors = ["liangping <18786721@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "move"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.51", features = ["derive"] }
serde_json = "1.0.51"
include_dir = "0.5.0"
structopt = "0.3.13"
toml = "0.4.5"
rand = "0.6.5"
glob = "0.3.0"

libra-config = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
stdlib = { git="https://github.com/libra/libra.git", version = "0.1.0" }
vm = {git="https://github.com/libra/libra.git", version="0.1.0"}
move-vm-runtime = {git="https://github.com/libra/libra.git", version="0.1.0" }
move-vm-state = {git="https://github.com/libra/libra.git", version="0.1.0" }
language-e2e-tests = { git="https://github.com/libra/libra.git", version = "0.1.0" }
bytecode-verifier = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
datatest-stable = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
functional-tests = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
ir-to-bytecode = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
libra-types = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
libra-crypto = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
move-ir-types = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
compiler = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
move-vm-types= { git = "https://github.com/libra/libra.git", version = "0.1.0" }
bytecode-source-map = { git = "https://github.com/libra/libra.git", version = "0.1.0" }