[package]
name = "move-runner"
version = "0.0.4"
authors = ["Ping <18786721@qq.com>"]
edition = "2018"
description = "A Move VM simulator which allows developers to compile and run Move script/module on local computer. "
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/ping-pub/move-runner/"
repository = "https://github.com/ping-pub/move-runner/"
keywords = ["move", "libra", "smart contract"]
categories = ["command-line-utilities"]
include = [
    "**/*.rs",
    "LICENSE","README.md",
    "Cargo.toml",
]

[[bin]]
name = "move"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.51", features = ["derive"] }
serde_json = "1.0.51"
include_dir = "0.5.0"
structopt = "0.3.13"
toml = "0.4.5"
rand = "0.6.5"
glob = "0.3.0"
termcolor = "1.1.0"

libra-config = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
stdlib = { git="https://github.com/libra/libra.git", version = "0.1.0" }
vm = {git="https://github.com/libra/libra.git", version="0.1.0"}
move-vm-runtime = {git="https://github.com/libra/libra.git", version="0.1.0" }
move-vm-state = {git="https://github.com/libra/libra.git", version="0.1.0" }
language-e2e-tests = { git="https://github.com/libra/libra.git", version = "0.1.0" }
bytecode-verifier = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
datatest-stable = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
functional-tests = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
ir-to-bytecode = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
libra-types = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
libra-crypto = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
libra-vm = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
move-ir-types = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
compiler = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
move-vm-types= { git = "https://github.com/libra/libra.git", version = "0.1.0" }
bytecode-source-map = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
vm-genesis = { git = "https://github.com/libra/libra.git", version = "0.1.0" }
generate-key = { git = "https://github.com/libra/libra.git", version = "0.1.0" }